testing z-index fix | ref: #3

--- a/components/Video.module.css
+++ b/components/Video.module.css
@@ -242,6 +242,7 @@
 }
 
 .tooltip {
+    z-index:2;
     position: relative;
     display: inline-block;
     /* border-bottom: 1px dotted black; */
